@@ -1,3 +1,4 @@
+fixed pause (thanks to Ingolf)
 added shoot attack
 added buildtime info
 reconnect
